# LLM-Runner

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  contributing.md
docs/: README.md  architecture.md  benchmarking.md  build_and_config_guide.md  contributing.md  integration.md  troubleshooting.md
model_configuration_files/: executorchTextConfig-llama-3.2-1B.json  llamaConfig.txt  llamaVisionConfig-qwen2-vl-2B.json  mnnVisionConfig-qwen2.5-3B.json  onnxrtConfig.txt
scripts/cmake/: check-flag.cmake  configuration-options.cmake  configuration-presets.json  download-resources.cmake  find-catch.cmake  find_stb.cmake  llama-cpp-backends.cmake  llama-cpp-workaround.cmake  python-deps.cmake
scripts/cmake/toolchains/: aarch64-base.cmake  base.cmake  native-base.cmake  native-dispatch.cmake  native-linux-aarch64.cmake  native-linux-x86_64.cmake  native-macos-aarch64.cmake  x-android-aarch64.cmake  x-linux-aarch64.cmake
scripts/dev/: check_framework_updates.py  framework_versions.py  llm_doctor.py
scripts/py/: build_mediapipe.py  download_resources.py  requirements-executorch.txt  requirements.json
skills/llm-add-model-support/references/: backend-notes.md
skills/llm-benchmark-workflow/: SKILL.md
skills/llm-benchmark-workflow/references/: bench-notes.md
skills/llm-benchmark-workflow/scripts/: bench_smoke.py
skills/llm-build-and-ctest/: SKILL.md
skills/llm-debug-test-failures/: SKILL.md
skills/llm-session-start/: SKILL.md
skills/llm-session-start/references/: what-it-checks.md
src/cpp/: CMakeLists.txt  Llm.cpp  LlmBridge.cpp  LlmCache.cpp  LlmCache.hpp  LlmJni.cpp
src/cpp/benchmark/: BenchRunner.cpp  BenchRunner.hpp  CMakeLists.txt  LlmBench.cpp  LlmBench.hpp  main.cpp
src/cpp/chat/: CMakeLists.txt  LlmChat.cpp  LlmChat.hpp
src/cpp/config/: CMakeLists.txt  LlmConfig.cpp  LlmConfig.hpp
src/cpp/frameworks/: CMakeLists.txt
src/cpp/frameworks/common/: CMakeLists.txt  ImageUtils.cpp  ImageUtils.hpp  README.md  TokenQueue.hpp
src/cpp/frameworks/executorch/: CMakeLists.txt  ExecuTorchImpl.cpp  LlmFactory.cpp  LlmFactory.hpp  LlmImpl.hpp
src/cpp/frameworks/llama_cpp/: CMakeLists.txt  LlamaImpl.cpp  LlamaTextImpl.cpp  LlamaTextImpl.hpp  LlamaVisionImpl.cpp  LlamaVisionImpl.hpp  LlmImpl.hpp
src/cpp/frameworks/mediapipe/: CMakeLists.txt  LlmFactory.cpp  LlmFactory.hpp  LlmImpl.hpp  MediaPipeImpl.cpp
src/cpp/frameworks/mnn/: CMakeLists.txt  LlmImpl.hpp  MnnImpl.cpp
src/cpp/frameworks/onnxruntime_genai/: CMakeLists.txt  LlmImpl.hpp  OnnxrtImpl.cpp
src/cpp/interface/: CMakeLists.txt  Llm.hpp  LlmBridge.hpp
src/cpp/log/: BuildInfo.cpp  BuildInfo.hpp  CMakeLists.txt  LlmBuildInfoConfig.hpp.in  Logger.hpp
src/java/: CMakeLists.txt
src/java/com/arm/: Llm.java  LlmConfig.java
test/: CMakeLists.txt
test/cpp/: BenchRunnerTest.cpp  ImageUtilsTest.cpp  LlmBridgeTest.cpp  LlmCacheTest.cpp  LlmChatTest.cpp  LlmConfigTest.cpp  LlmImplFactoryTest.cpp  LlmTest.cpp  LlmUtils.cpp
test/java/com/arm/: LlamaTestJNI.java  LlmTestJNI.java
